Implemented Model and Persistence using ORM tool Hibernate and updated the logging mechanism using log4j2